# sumo

./: .gitignore  README.md  pyproject.toml  sumo_project_handoff.md
Old Data/: haru_2026_day1_makuuchi_results.csv  haru_2026_makuuchi_all_days_results.xlsx  haru_2026_makuuchi_wrestler_attributes.xlsx
data/: sumo.db
data/exports/: banzuke_master.csv  fixture_summary.csv  matches_master.csv  validation_banzuke_coverage.csv  validation_basho_summary.csv  validation_bout_counts_by_basho_day.csv  validation_duplicates.csv  validation_fixture_overlap_haru_2026.csv  validation_match_wrestlers_missing_from_banzuke.csv  validation_report.md  validation_unknown_wrestlers.csv  wrestlers_master.csv
data/raw/jsa_profiles/: profile_2565.html  profile_2629.html  profile_2775.html  profile_2890.html  profile_2892.html  profile_3150.html  profile_3207.html  profile_3255.html  profile_3265.html  profile_3321.html  profile_3337.html  profile_3367.html  profile_3371.html  profile_3376.html  profile_3417.html  profile_3464.html  profile_3485.html  profile_3521.html  profile_3532.html  profile_3553.html  profile_3594.html  profile_3616.html  profile_3620.html  profile_3622.html  profile_3630.html  profile_3661.html  profile_3682.html  profile_3705.html  profile_3711.html  profile_3742.html  profile_3743.html  profile_3753.html  profile_3761.html  profile_3818.html  profile_3839.html  profile_3840.html  (+33 more)
sumo_data/: __init__.py  api.py  basho.py  cli.py  export.py  fixtures.py  normalize.py  pipeline.py  storage.py
tests/: test_basho.py  test_fixtures.py  test_normalize.py
(+198 files in other folders)
